...
    }

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(color = CodeBlitzTheme.colors.background)
            .testTag("Register")
    )
    {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .zIndex(3f)
...
                            TextFieldCodeBlitz(
                                modifier = Modifier
                                    .padding(horizontal = 15.dp)
                                    .fillMaxWidth(),
                                internalModifier = Modifier
                                    .fillMaxWidth()
                                    .testTag("Login Register"),
                                labelGap = 1.dp,
                                label = "Логин",
                                paddingValues = PaddingValues(12.dp),
                                text = viewModel.registerData.login,
                                onValueChange = { newValue ->
                                    viewModel.updateRegisterData(
...
                            TextFieldCodeBlitz(
                                modifier = Modifier
                                    .padding(horizontal = 15.dp)
                                    .fillMaxWidth(),
                                internalModifier = Modifier
                                    .fillMaxWidth()
                                    .testTag("Password Register"),
                                labelGap = 1.dp,
                                label = "Пароль",
                                paddingValues = PaddingValues(12.dp),
                                isPassword = true,
                                text = viewModel.registerData.password,
                                onValueChange = { newValue ->
...
                            TextFieldCodeBlitz(
                                modifier = Modifier
                                    .padding(horizontal = 15.dp)
                                    .fillMaxWidth(),
                                internalModifier = Modifier
                                    .fillMaxWidth()
                                    .testTag("Repeat Password"),
                                labelGap = 1.dp,
                                label = "Повторите пароль",
                                paddingValues = PaddingValues(12.dp),
                                isPassword = true,
                                text = viewModel.confirmPass,
                                onValueChange = { newValue ->
...
                                        "Некорректная почта!",
                                        style = CodeBlitzTheme.typography.bodyMedium,
                                        color = CodeBlitzTheme.colors.tertiary,
                                        modifier = Modifier
                                            .align(Alignment.Center)
                                            .padding(horizontal = 12.dp, vertical = 12.dp)
                                            .testTag("Wrong Email"),
                                        textAlign = TextAlign.Center,
                                        maxLines = 2
                                    )
                                }
                            }
                            //Сообщение о слабом пароле
...
                                        "Слишком слабый пароль!",
                                        style = CodeBlitzTheme.typography.bodyMedium,
                                        color = CodeBlitzTheme.colors.tertiary,
                                        modifier = Modifier
                                            .align(Alignment.Center)
                                            .padding(horizontal = 12.dp, vertical = 12.dp)
                                            .testTag("Weak Password"),
                                        textAlign = TextAlign.Center,
                                        maxLines = 2
                                    )
                                }
                            }
                            Spacer(
...
                    .fillMaxWidth()
                    .padding(horizontal = 30.dp)
                    .height(65.dp)
                    .align(Alignment.Center)
                    .zIndex(4f)
                    .offset(y = 10.dp)
                    .testTag("Register Button"),
                text = "Регистрация",
                //Кнопка регистрации доступна только при выполнении условий корректной почты и пароля
                enabled = viewModel.isButtonEnabled,
                onClick = { viewModel.register() }
            )
        }
...
