...
    controller: NavController,
    itemID: String = "0"
) {
    Spacer(
        modifier = Modifier
            .height(20.dp)
            .testTag("TaskElement")
    )
    Box(
        modifier = Modifier
            .padding(top = 2.dp)
            .shadow(
                2.dp,
...
